--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>William's Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <a href="#about_me"><div class="items">About Me</div></a>
+        <a href="#education"><div class="items">Education</div></a>
+        <a href="#future"><div class="items">Future Intrest</div></a>
+        <a href="#post"><div class="items">Post High School Plans</div></a>
+        <a href="#contact"><div class="items">Contant Info.</div></a>
+    </nav>
+
+    <h1 class="me">This is me:</h1>
+    <img src="images\baby.webp">
+    <img src="images\beach.webp">
+    <img src="images\school_logo.png">
+    <img src="images\mascot.png">
+
+    <div id="about_me">
+        <h1>About Me</h1>
+        <p>Hi! My name is William Zheng and I am currently a rising senior. I am a Asian-American who is activly trying to work towards their goals. Some things that I value would be hard work, honesty, persistence and that anything can happen if you put your mind to it.</p>
+    </div>
+    <br>
+    <div id="education">
+        <h1>Education</h1>
+        <p>As mentioned previously, I am currently a rising senior of Baruch College Campus High School which is situated right next to Madison Square Garden and the famed Flatiron Building. 
+        With my school being situated in such a area, one would assume it's quite large, however, it's small but that's not something of huge concern. 
+        I was first admitted in September of 2021 and expect to graduate in June of 2025 and I must say, the first 3 years flew by in a instant. At first I was pretty anxious of what was to come, however, that feeling soon dissipated only after a month of freshman year. 
+        It's crazy thinking back on it now just how much fun high school was during those first 3 years which is why I am very glad to have meet the people I met and learnt the things that was taught to me in this community. </p>
+    </div>
+    <br>
+    <div id="future">
+        <h1>Future Intrest</h1>
+        <p>As of right now, I am unsure what career I want to pursure in the near future but what I do know is that I want it to be related with computer science due to the fascinating nature of it all.
+           Anyhow, I think that as of right now, I plan on just trying to find more intrest and hobbies that I believe could align with a future career for me. 
+        </p>
+    </div>
+    <br>
+    <div id="post">
+        <h1>Post High School Plans</h1>
+        <p>Hopefully during this last stretch of my high school year, I would have an idea of careers that intrest me and based off it will evidently allow me to decide where I want to study. 
+            As of now, the one college I want to attend would be UT Austin, which I know will be a huge commitment, but I believe that it will be all worth it in the longrun. 
+        </p>
+    </div>
+    <br>
+    <div id="contact">
+        <h1>Contact Information</h1>
+        <p>Gmail:williamzheng0719@gmail.com</p>
+        <p>Linkedin:<a href="https://www.linkedin.com/in/william-zheng-85ba55321/" target="_blank"> William Zheng</a></p>
+
+    </div>
+</body>
+</html>
